Answer for each term on its own, and turn a placement into an answer in one place
Two things, and both of them are an obligation carried by whoever happened to be
holding it rather than by the thing it is about.

Where a term runs was asked entirely of the reading that relates positions, so
everything that reading has no name for fell out of the answer — and it fell out
for a whole parameter's worth of the form at a time. A position ordered by its own
values has ends that are values: `data Code = String invariant value >= "A"` stops
at "A", and there is no number there for a relation to be about, so the floor was
dropped and a line drawn below it was one nothing refused. A count no clause takes
has no coordinate either, so a caller who fixed it at two was answered as though
nothing had been said. And a form with one such term in it lost what was known of
every term beside it: two positions each known to be at least none added up to
something with no floor.

All three are one mistake. An answer already in hand was given up because the
mechanism it was asked through declined. So every term is answered for on its own
first — where it stands if it has been fixed, what its own position was read to
hold, and what the term guarantees of itself — and what the rules relating them
leave the form is met onto that. Meeting only narrows, so this is the direction the
whole boundary is written in. A form that is one term taken as itself is that
term's own answer met with what the relation leaves it: the arithmetic is the
identity there, and it is the only shape a position the arithmetic cannot count is
ever asked in.

The other is the last step before a placement is handed back. A search hands back
the same thing whatever it was searching for, and each search was written on its
own — so each also had to remember to hold what it found against the rules. Two of
the three did not, and they were noticed one at a time, which is what a per-shape
obligation costs. A range says where a po